argocd/backstage/clusters/portal-petr-aoa-0/apps/react-demo-app/app/gloo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: react-demo-app
  namespace: react-demo-ns
  labels:
    backstage.io/kubernetes-id: react-demo-app
spec:
  parentRefs:
  - name: http-gateway
    namespace: gloo-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/demo"
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplaceFullPath
          replaceFullPath: /
    backendRefs:
    - name: react-demo-app
      port: 80
